Fixed margin alignment

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -25,8 +25,8 @@
   justify-content: center;
   align-items: center;
   margin-top: 1rem;
-  margin-left: 1rem;
-  margin-right: 1rem;
+  margin-left: 4rem;
+  
   gap: 6rem;
   padding: 2rem 0;
 }
